# manim-phd

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: install_ubuntu_deps.sh
spectrum/: spec6.py  spectrum.py  spectrumconected.py  spectrumconnected2.py  spectrumconnedted0.py  spectrumcopy.py  spectrumslides.py
tools/: runloop.py  slidesdemo.py
